[tool.poetry]
name = "salt_eauth_rest_caching_ldap"
version = "1.2.2"
description = "Salt eauth REST API with caching LDAP groups"
authors = ["Simon Lundström <simlu+github@su.se>"]
license = "BSD-3-Clause"
packages = [
    { include = "caching_ldap" },
]

[tool.poetry.dependencies]
python = "^3.9"
su-logging = {version = "^0.2.1", extras = ["structured"]}
flask = "^1.1"
markupsafe = "2.0.1"
# This can be changed when we stop using Python 3.5
Flask-APScheduler = "1.12.3"
pyyaml = { version = "!=6.0.0,!=5.4.0,!=5.4.1" }

[tool.poetry.dev-dependencies]
isort = "^4.3.21"
pylint = "^2.3.1"
yapf = "^0.28"

[tool.poetry.scripts]
caching_ldap = 'wsgi:main'

[build-system]
requires = ["poetry>=1.3,<2.0"]
build-backend = "poetry.masonry.api"
